k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
      version: v1
  template:
    metadata:
      labels:
        app: service-c
        version: v1
    spec:
      containers:
        - name: service-c
          image: amitb26j/service-c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
      version: v2
  template:
    metadata:
      labels:
        app: service-c
        version: v2
    spec:
      containers:
        - name: service-c
          image: amitb26j/service-c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  labels:
    app: service-c
spec:
  type: ClusterIP
  ports:
    - port: 8080
      #nodePort: 30080
      name: http
  selector:
    app: service-c
